--- a/index.html
+++ b/index.html
@@ -15,25 +15,21 @@
     <div class="info">
         <i class="fa-solid fa-arrow-right"></i>
         <div id="title">
-            <p class="subtitle">Titolo:</p> &#8594; Calcolatrice
+            <p class="subtitle">Titolo:</p>  Calcolatrice
         </div>
 
         <div id="creator">
-            <p class="subtitle">Sviluppatore:</p> &#8594; Stiven Hoxha
+            <p class="subtitle">Sviluppatore:</p> Stiven Hoxha
         </div>
 
         <div id="languages">
-            <p class="subtitle">Stack tecnologico:</p> &#8594; HTML, CSS E JAVASCRIPT
+            <p class="subtitle">Stack tecnologico:</p> HTML, CSS E JAVASCRIPT
         </div>
 
         <div id="description">
-            <p class="subtitle">Descrizione:</p> &#8594; Una calcolatrice web semplice e
+            <p class="subtitle">Descrizione:</p> Una calcolatrice web semplice e
             funzionale <br> che permette di effettuare le operazioni
             matematiche fondamentali: <br> addizioni, sottrazioni, moltiplicazioni e divisioni.
-        </div>
-
-        <div id="date">
-            <p class="subtitle">Data:</p> &#8594; 18 ottobre 2025
         </div>
 
     </div>
