--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="info">
         <i class="fa-solid fa-arrow-right"></i>
         <div id="title">
-            <p class="subtitle">Titolo:</p>  Calcolatrice
+            <p class="subtitle">Titolo:</p> Calcolatrice
         </div>
 
         <div id="creator">
@@ -32,6 +32,10 @@
             matematiche fondamentali: <br> addizioni, sottrazioni, moltiplicazioni e divisioni.
         </div>
 
+    </div>
+
+    <div id="description-mobile">
+        <p class="subtitle">Descrizione:</p> Calcolatrice web per operazioni base: <br>+, -, x, ÷.
     </div>
 
 
