--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
     </div>
 
-    <div id="description-mobile">
+    <!-- <div id="description-mobile">
         <p class="subtitle">Descrizione:</p> Calcolatrice web per operazioni base: <br>+, -, x, ÷.
-    </div>
+    </div> -->
 
 
 
